--- a/app/views/movies/directors_show.html.erb
+++ b/app/views/movies/directors_show.html.erb
@@ -5,6 +5,7 @@
 <table>
     
   <tr>
+    <th>Delete</th>
     <th>Name</th>
     <th>Bio</th> 
     <th>Dob</th>
@@ -12,6 +13,7 @@
   </tr>
   
   <tr>
+    <td><a href="/delete_director/<%= @d.id %>">Delete</a></td>
     <td><%= @d.name %></td>
     <td><%= @d.bio %></td>
     <td><%= @d.dob %></td>
