Added new director link to index

--- a/app/views/movies/directors_index.html.erb
+++ b/app/views/movies/directors_index.html.erb
@@ -1,12 +1,13 @@
 <h1>All Directors</h1>
 
-<!--Update this code for link to add new Director-->
-<!--<a href="/photos/new">-->
-    <!--Add a new photo-->
-<!--</a>-->
+<div>
+<a href="/directors/new_form">
+    Add a new director
+</a>
+</div>
+
 
 <div>
-
 
 <!--<div>-->
 <!--  <% @d.each do |director| %>-->
@@ -20,7 +21,6 @@
 <!--    </div>-->
 <!--  <% end %>-->
 <!--</div>-->
-
 
 <table>
     
