Show details link added to index & records w/o image url deleted

--- a/app/views/movies/directors_index.html.erb
+++ b/app/views/movies/directors_index.html.erb
@@ -35,8 +35,11 @@
   </tr>
   
   <tr>
-    <td><a href="/delete_director/<%= director.id %>">Delete</a>
-    <a href="/directors/<%= director.id %>/edit_form">Edit</a></td>  
+    <td>
+      <a href="/directors/<%= director.id %>">Show details</a>
+      <a href="/directors/<%= director.id %>/edit_form">Edit</a> 
+      <a href="/delete_director/<%= director.id %>">Delete</a>
+     </td>
     <td><%= director.name %></td>
     <td><%= director.bio %></td>
     <td><%= director.dob %></td>
