Delete to Delete director

--- a/app/views/movies/directors_show.html.erb
+++ b/app/views/movies/directors_show.html.erb
@@ -13,7 +13,7 @@
   </tr>
   
   <tr>
-    <td><a href="/delete_director/<%= @d.id %>">Delete</a>
+    <td><a href="/delete_director/<%= @d.id %>">Delete director</a>
     <a href="/directors/<%= @d.id %>/edit_form">Edit</a></td>
     <td><%= @d.name %></td>
     <td><%= @d.bio %></td>
