--- a/app/views/movies/directors_show.html.erb
+++ b/app/views/movies/directors_show.html.erb
@@ -14,7 +14,7 @@
   
   <tr>
     <td><a href="/delete_director/<%= @d.id %>">Delete director</a>
-    <a href="/directors/<%= @d.id %>/edit_form">Edit</a></td>
+    <a href="/directors/<%= @d.id %>/edit_form">Edit director</a></td>
     <td><%= @d.name %></td>
     <td><%= @d.bio %></td>
     <td><%= @d.dob %></td>
