--- a/app/views/movies/directors_edit_form.html.erb
+++ b/app/views/movies/directors_edit_form.html.erb
@@ -25,7 +25,7 @@
 
   <div>
     <label for="image_url_input">
-      Image Url
+      Image url
     </label>
     <input id="image_url_input" type="text" name="the_image_url"  value="<%= @d.image_url %>">
   </div>
