--- a/app/views/movies/directors_index.html.erb
+++ b/app/views/movies/directors_index.html.erb
@@ -31,7 +31,7 @@
     <th>Name</th>
     <th>Bio</th> 
     <th>Dob</th>
-    <th>Image</th>
+    <th>Image url</th>
   </tr>
   
   <tr>
@@ -43,7 +43,8 @@
     <td><%= director.name %></td>
     <td><%= director.bio %></td>
     <td><%= director.dob %></td>
-    <td><img src="<%= director.image_url %>"></td>
+    <!--<td><img src="<%= director.image_url %>"></td>-->
+    <td><%= director.image_url %></td>
   </tr>
   
     <% end %>
