Changed detail page to show image url not actual image

--- a/app/views/movies/directors_show.html.erb
+++ b/app/views/movies/directors_show.html.erb
@@ -18,7 +18,8 @@
     <td><%= @d.name %></td>
     <td><%= @d.bio %></td>
     <td><%= @d.dob %></td>
-    <td><img src="<%= @d.image_url %>"></td>
+    <!--<td><img src="<%= @d.image_url %>"></td>-->
+    <td><%= @d.image_url %></td>
   </tr>
   
 </table>
