ACTORS edit form has bio pre-populated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <h1>This text is on all pages in</h1>
   <div class="container">
     <%= yield %>
   </div>
