--- a/app/views/movies/actors_edit_form.html.erb
+++ b/app/views/movies/actors_edit_form.html.erb
@@ -13,7 +13,8 @@
     <label for="bio_input">
       Bio
     </label>
-    <input id="bio_input" type="text" name="the_bio" value="<%= @a.bio %>">
+    <!--<input id="bio_input" type="text" name="the_bio" value="<%= @a.bio %>">-->
+    <textarea id="bio_input" name="the_bio"><%= @a.bio %></textarea>
   </div>
 
   <div>
