Fixed last 2 failing cases needing <textarea> instead of <input>

--- a/app/views/movies/directors_edit_form.html.erb
+++ b/app/views/movies/directors_edit_form.html.erb
@@ -13,7 +13,8 @@
     <label for="bio_input">
       Bio
     </label>
-    <input id="bio_input" type="text" name="the_bio" value="<%= @d.bio %>">
+    <!--<input id="bio_input" type="text" name="the_bio" value="<%= @d.bio %>">-->
+    <textarea id="bio_input" name="the_bio"><%= @d.bio %></textarea>
   </div>
 
   <div>
