--- a/app/views/movies/movies_edit_form.html.erb
+++ b/app/views/movies/movies_edit_form.html.erb
@@ -27,7 +27,8 @@
     <label for="description_input">
       Description
     </label>
-    <input id="description_input" type="text" name="the_description" value="<%= @m.description %>">
+    <!--<input id="description_input" type="text" name="the_description" value="<%= @m.description %>">-->
+    <textarea id="description_input" name="the_description"><%= @m.description %></textarea>
   </div>
 
   <div>
